/*
 * $Id: ChangeLog,v 1.2956 2004/05/19 07:25:36 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-05-20 11:50 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * include/set.ch
    + #define _SET_PRINTERJOB 115
  * include/hbset.h
    + HB_SET_PRINTERJOB      = 115
  * source/pp/pptable.c
    Added support for
      _SET_PRINTERJOB
  * source/rtl/set.c
    + enabled support for setting print job name ( case HB_SET_PRINTERJOB : )

2004-05-19 00:25 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapi.h
  * source/vm/extend.c
    + Added: void HB_EXPORT hb_storclenAdopt( char * szText, ULONG ulLen, int iParam, ... )

  * source/rtl/cstruct.prg
    ! Fixed :DeValue() to return Self.

  * source/vm/fastitem.c
    * Minor formating.

2004-05-18 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/vm/arrays.c
    ! Fix hb_arraydel() deleting array with len 1.
      Revert change version 1.59

2004-05-18 12:11 UTC-0400 Sylvain Robert <s.robert/at/videotron.ca>
  * contrib/hbzlib/zipnew.cpp
      * hb_CheckSpanMode() was giving a GPF if the ZIP file was read only
        and the program was called from a batch file (under windows)
        User must use SETZIPREADONLY() before HB_UNZIPFILE() when the ZIP
        file is RO or on a RO media

2004-05-18 08:04 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/thread.c
  * source/vm/hvm.c
    + Added logic to free Sequence management linked list when app/thread terminates.

2004-05-18 11:00 UTC-0300 Luiz Rafael Culik<culikr / at /brturbo.com >
  * contrib/hbzlib/zip.c
    ! fixed some warnings under linux

2004-05-18 14:10 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
  * source/rtl/gtwvt/Makefile
    * added wvtcore.c and wvtutils.c

2004-05-18 12:10 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
  * source/rdd/dbcmd.c
    ! Fixed hb_strescape
